<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="co.edu.eafit.dis.analisisnumerico.FalseRuleActivity">


    <EditText
        android:id="@+id/exprText"
        android:layout_width="0dp"
        android:layout_height="43dp"
        android:layout_marginEnd="31dp"
        android:layout_marginStart="31dp"
        android:layout_marginTop="28dp"
        android:ems="10"
        android:hint="@string/fx"
        android:inputType="textPersonName"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1" />

    <EditText
        android:id="@+id/tolText"
        android:layout_width="0dp"
        android:layout_height="46dp"
        android:layout_marginTop="13dp"
        android:ems="10"
        android:hint="@string/tol"
        android:inputType="textPersonName"
        app:layout_constraintLeft_toLeftOf="@+id/iterText"
        app:layout_constraintRight_toRightOf="@+id/iterText"
        app:layout_constraintTop_toBottomOf="@+id/iterText"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1" />

    <EditText
        android:id="@+id/iterText"
        android:layout_width="0dp"
        android:layout_height="46dp"
        android:layout_marginTop="13dp"
        android:ems="10"
        android:hint="@string/iter"
        android:inputType="textPersonName"
        app:layout_constraintLeft_toLeftOf="@+id/exprText"
        app:layout_constraintRight_toRightOf="@+id/exprText"
        app:layout_constraintTop_toBottomOf="@+id/exprText"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1" />

    <EditText
        android:id="@+id/infText"
        android:layout_width="0dp"
        android:layout_height="46dp"
        android:layout_marginTop="13dp"
        android:ems="10"
        android:hint="@string/xi"
        android:inputType="textPersonName"
        app:layout_constraintLeft_toLeftOf="@+id/tolText"
        app:layout_constraintRight_toRightOf="@+id/tolText"
        app:layout_constraintTop_toBottomOf="@+id/tolText"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1" />

    <EditText
        android:id="@+id/supText"
        android:layout_width="0dp"
        android:layout_height="46dp"
        android:layout_marginTop="14dp"
        android:ems="10"
        android:hint="@string/xs"
        android:inputType="textPersonName"
        app:layout_constraintLeft_toLeftOf="@+id/infText"
        app:layout_constraintRight_toRightOf="@+id/infText"
        app:layout_constraintTop_toBottomOf="@+id/infText"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1" />

    <Button
        android:id="@+id/sendBtn"
        android:layout_width="95dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="6dp"
        android:onClick="onSendClick"
        android:text="@string/send"
        app:layout_constraintBottom_toTopOf="@+id/resultText"
        app:layout_constraintLeft_toLeftOf="@+id/supText"
        app:layout_constraintRight_toRightOf="@+id/supText"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1" />

    <EditText
        android:id="@+id/resultText"
        android:layout_width="0dp"
        android:layout_height="46dp"
        android:layout_marginBottom="101dp"
        android:layout_marginTop="102dp"
        android:ems="10"
        android:enabled="false"
        android:hint="@string/res"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="@+id/sendBtn"
        app:layout_constraintRight_toRightOf="@+id/sendBtn"
        app:layout_constraintTop_toTopOf="@+id/supText"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintTop_creator="1" />

    <Button
        android:id="@+id/connectBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:onClick="onSearchClick"
        android:text="@string/con"
        app:layout_constraintLeft_toLeftOf="@+id/resultText"
        app:layout_constraintRight_toRightOf="@+id/resultText"
        app:layout_constraintTop_toBottomOf="@+id/resultText"
        tools:layout_constraintTop_creator="1" />

</android.support.constraint.ConstraintLayout>
